Port from MountEntry to FstabEntry.

This helps to preserve comments in fstab file

BUG: 305469